--- a/template/bootstrap3/shop-basket.html
+++ b/template/bootstrap3/shop-basket.html
@@ -1,6 +1,6 @@
 <section class="bin-shop" ng-controller="ViewBasketController" ng-init="init({validateOrder:true})">
     <div class="container">
-        <div class="row">
+        <div class="row" ng-if="items.length > 0">
             <div class="col-xs-12 col-sm-10 col-sm-offset-1 col-lg-8 col-lg-offset-2">
 
                 <div class="bin-basket-items" ng-if="viewport.xs">
@@ -109,6 +109,12 @@
                 </div>
 
             </div>
+        </div>
+        <div class="row" ng-if="items.length == 0">
+            <div class="bin-empty-visual">
+                <i class="fa fa-shopping-cart"></i>
+            </div>
+            <h3 class="bin-empty-title" i18n code="shop.basket.empty.message" read-only ng-bind="::var"></h3>
         </div>
     </div>
 </section>
