--- a/template/bootstrap3/shop-summary.html
+++ b/template/bootstrap3/shop-summary.html
@@ -1,29 +1,21 @@
 <div class="bin-shop" ng-controller="PlacePurchaseOrderController as ppoc"
      ng-init="ppoc.setPaymentProvider('wire-transfer')">
     <div class="container">
-
         <div class="row">
-            <div class="col-xs-12 col-sm-5 col-sm-offset-1 col-lg-4 col-lg-offset-2">
+            <div class="col-xs-12 col-sm-10 col-sm-offset-1 col-lg-8 col-lg-offset-2">
                 <div class="panel panel-default panel-profile">
                     <div class="panel-heading" i18n code="shop.profile.panel.title" read-only>
                         <i class="fa fa-user fa-fw"></i> {{::var}}
                     </div>
                     <div class="panel-body" ng-controller="AccountMetadataController">
-                        <div class="row">
-                            <div class="col-xs-5 text-right" i18n code="customer.profile.email.label" read-only>
-                                <strong>{{::var}}</strong>
-                            </div>
-                            <div class="col-xs-7">
-                                {{::metadata.email}}
-                            </div>
+                        <label i18n code="customer.profile.email.label" read-only>{{::var}}</label>
+                        <div>
+                            {{::metadata.email}}
                         </div>
-                        <div class="row" ng-controller="CustomerProfileController" ng-init="init()">
-                            <div class="col-xs-5 text-right" i18n code="customer.profile.vat.label" read-only>
-                                <strong>{{::var}}</strong>
-                            </div>
-                            <div class="col-xs-7">
-                                {{::vat}}
-                            </div>
+                        <hr>
+                        <label i18n code="customer.profile.vat.label" read-only>{{::var}}</label>
+                        <div ng-controller="CustomerProfileController" ng-init="init()">
+                            {{vat || '/'}}
                         </div>
                     </div>
                 </div>
