--- a/template/bootstrap3/shop-order-confirmation-header.html
+++ b/template/bootstrap3/shop-order-confirmation-header.html
@@ -3,7 +3,7 @@
         <div class="row">
             <div class="col-xs-12">
                 <div class="page-header">
-                    <h1 i18n code="shop.order.history.title" read-only ng-bind="::var"></h1>
+                    <h1 i18n code="shop.order.confirmed.title" read-only ng-bind="::var"></h1>
                 </div>
             </div>
         </div>
