--- a/template/bootstrap3/shop-purchase-order-details-header.html
+++ b/template/bootstrap3/shop-purchase-order-details-header.html
@@ -3,9 +3,7 @@
         <div class="row">
             <div class="col-xs-12">
                 <div class="page-header">
-                    <h1 i18n code="shop.order.details.title" read-only>
-                        {{::var}}
-                    </h1>
+                    <h1 i18n code="shop.order.details.title" read-only ng-bind="::var"></h1>
                 </div>
             </div>
         </div>
