--- a/template/bootstrap3/shop-payment-provider-permission-approved-header.html
+++ b/template/bootstrap3/shop-payment-provider-permission-approved-header.html
@@ -3,7 +3,8 @@
         <div class="row">
             <div class="col-xs-12">
                 <div class="page-header">
-                    <h1 i18n code="shop.payment.provider.permission.approved.title" read-only ng-bind="::var"></h1>
+                    <h1 ng-hide="status == 'canceled'" i18n code="shop.payment.provider.permission.approved.title" read-only ng-bind="::var"></h1>
+                    <h1 ng-show="status == 'canceled'" i18n code="shop.payment.provider.permission.canceled.title" read-only ng-bind="::var"></h1>
                 </div>
             </div>
         </div>
