--- a/template/bootstrap3/shop-payment-provider-permission-approved.html
+++ b/template/bootstrap3/shop-payment-provider-permission-approved.html
@@ -2,7 +2,8 @@
     <div class="container">
         <div class="row">
             <div class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3">
-                <div class="panel panel-success">
+                {{status}}
+                <div ng-hide="status == 'canceled'" class="panel panel-success">
                     <!--<div class="panel-heading" i18n code="shop.order.confirmed.panel.title" read-only>-->
                     <div class="panel-heading">
                         <i class="fa fa-smile-o fa-fw"></i> ???header???
@@ -22,6 +23,16 @@
                             <i18n code="mandate.{{v.label}}" default="{{v.description}}">
                                 {{v.code}}: {{var}}
                             </i18n>
+                        </p>
+                    </div>
+                </div>
+                <div ng-show="status == 'canceled'" class="panel panel-default">
+                    <div class="panel-heading">
+                        <i class="fa fa-smile-o fa-fw"></i> ???header???
+                    </div>
+                    <div class="panel-body">
+                        <p i18n code="shop.payment.provider.permission.canceled.body" read-only>
+                        {{::var}}
                         </p>
                     </div>
                 </div>
