--- a/template/bootstrap3/shop-approve-payment.html
+++ b/template/bootstrap3/shop-approve-payment.html
@@ -1,14 +1,10 @@
-<div class="bin-shop" ng-init="init()">
+<div class="bin-shop bin-shop-fullscreen" ng-init="init()">
     <div class="container">
         <div class="row">
-            <div class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3">
-                <div class="panel panel-success">
-                    <div class="panel-heading">
-                        <i class="fa fa-smile-o fa-fw"></i> ???header???
-                    </div>
-                    <div class="panel-body">
-
-                    </div>
+            <div class="col-xs-12">
+                <div class="text-center text-muted">
+                    <i class="fa fa-spinner fa-spin fa-5x"></i>
+                    <h3>Redirecting...</h3>
                 </div>
             </div>
         </div>
