update payment-provider-permission templates

--- a/template/bootstrap3/shop-basket.html
+++ b/template/bootstrap3/shop-basket.html
@@ -111,10 +111,10 @@
             </div>
         </div>
         <div class="row" ng-if="items.length == 0">
-            <div class="bin-empty-visual">
+            <div class="bin-status-visual">
                 <i class="fa fa-shopping-cart"></i>
             </div>
-            <h3 class="bin-empty-title" i18n code="shop.basket.empty.message" read-only ng-bind="::var"></h3>
+            <h3 class="bin-status-visual-title" i18n code="shop.basket.empty.message" read-only ng-bind="::var"></h3>
         </div>
     </div>
 </section>
