--- a/template/bootstrap3/shop-payment-provider-permission-approved.html
+++ b/template/bootstrap3/shop-payment-provider-permission-approved.html
@@ -2,38 +2,17 @@
     <div class="container">
         <div class="row">
             <div class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3">
-                {{status}}
-                <div ng-hide="status == 'canceled'" class="panel panel-success">
-                    <!--<div class="panel-heading" i18n code="shop.order.confirmed.panel.title" read-only>-->
-                    <div class="panel-heading">
-                        <i class="fa fa-smile-o fa-fw"></i> ???header???
-                    </div>
-                    <!--<div class="panel-body" ng-controller="AccountMetadataController">-->
-                        <!--<p i18n code="shop.order.confirmed.message" read-only>-->
-                            <!--{{::var}}-->
-                        <!--</p>-->
-
-                        <!--<p ng-if="::metadata.email"-->
-                           <!--i18n code="shop.order.confirmed.communication.message" read-only>-->
-                            <!--{{::var}} <strong>{{::metadata.email}}</strong>-->
-                        <!--</p>-->
-                    <!--</div>-->
-                    <div class="panel-body">
-                        <p class="error" ng-repeat="v in violations['mandate']">
-                            <i18n code="mandate.{{v.label}}" default="{{v.description}}">
-                                {{v.code}}: {{var}}
-                            </i18n>
-                        </p>
-                    </div>
+                <div class="bin-status-visual">
+                    <span ng-show="working || !status"><i class="fa fa-spinner fa-spin"></i></span>
+                    <span ng-hide="working || !status"><i class="fa" ng-class="status == 'canceled' ? 'fa-times' : 'fa-check'"></i></span>
                 </div>
-                <div ng-show="status == 'canceled'" class="panel panel-default">
-                    <div class="panel-heading">
-                        <i class="fa fa-smile-o fa-fw"></i> ???header???
-                    </div>
-                    <div class="panel-body">
-                        <p i18n code="shop.payment.provider.permission.canceled.body" read-only>
-                        {{::var}}
-                        </p>
+                <h3 class="bin-status-visual-title" ng-if="status"
+                    i18n code="shop.payment.provider.permission.{{status}}.title" read-only ng-bind="::var">
+                </h3>
+
+                <div ng-repeat="v in violations['mandate']">
+                    <div class="alert" ng-class="v.level == 'Warning' ? 'alert-warning' : 'alert-danger'">
+                        <i class="fa fa-exclamation-triangle fa-fw"></i> {{v.code}}: {{::v.description}}
                     </div>
                 </div>
             </div>
