--- a/template/bootstrap3/shop-basket.html
+++ b/template/bootstrap3/shop-basket.html
@@ -1,4 +1,4 @@
-<section class="bin-shop" ng-controller="ViewBasketController" ng-init="init({validateOrder:true})">
+<div class="bin-shop" ng-controller="ViewBasketController" ng-init="init({validateOrder:true})">
     <div class="container">
         <div class="row" ng-if="items.length > 0">
             <div class="col-xs-12 col-sm-10 col-sm-offset-1 col-lg-8 col-lg-offset-2">
@@ -117,4 +117,4 @@
             <h3 class="bin-status-visual-title" i18n code="shop.basket.empty.message" read-only ng-bind="::var"></h3>
         </div>
     </div>
-</section>
+</div>
