--- a/template/bootstrap3/shop-purchase-order-details.html
+++ b/template/bootstrap3/shop-purchase-order-details.html
@@ -1,4 +1,4 @@
-<section class="bin-shop" ng-init="viewOrderCtrl.init()">
+<div class="bin-shop" ng-init="viewOrderCtrl.init()">
     <div class="container" ng-if="::viewOrderCtrl.order">
         <div class="row">
             <div class="col-xs-12 col-sm-10 col-sm-offset-1 col-lg-8 col-lg-offset-2">
@@ -199,4 +199,4 @@
             </div>
         </div>
     </div>
-</section>
+</div>
