--- a/less/shop.less
+++ b/less/shop.less
@@ -18,8 +18,7 @@
     }
 
     .item-title {
-      margin-right: 40px;
-      margin-top: 0;
+      margin: 0 40px 20px 0;
       font-size: 16px;
     }
 
