--- a/template/bootstrap3/shop-basket.html
+++ b/template/bootstrap3/shop-basket.html
@@ -66,7 +66,7 @@
                                 <strong>{{::var}}</strong>
                             </div>
                             <div class="col-xs-4 col-sm-2">
-                                {{(itemTotal / 100).toFixed(2) | currency}}
+                                {{presentableItemTotal}}
                             </div>
                         </div>
                         <div class="row" ng-repeat="item in additionalCharges">
@@ -75,7 +75,7 @@
                                 <strong>{{::var}}</strong>
                             </div>
                             <div class="col-xs-4 col-sm-2">
-                                {{item.value / 100 | currency}}
+                                {{item.presentableValue}}
                             </div>
                         </div>
                         <div class="row">
@@ -84,7 +84,7 @@
                             </div>
                             <div class="col-xs-4 col-sm-2">
                                 <div class="basket-total-price">
-                                    {{subTotal / 100 | currency}}
+                                    {{presentablePrice}}
                                 </div>
                             </div>
                         </div>
