--- a/template/bootstrap3/shop-purchase-order-details.html
+++ b/template/bootstrap3/shop-purchase-order-details.html
@@ -74,9 +74,7 @@
                                     {{::var}} ({{::item.quantity}})
                                 </a>
                             </div>
-                            <div class="col-xs-4 text-right">
-                                {{::((item.price / 100) * item.quantity).toFixed(2) | currency}}
-                            </div>
+                            <div class="col-xs-4 text-right" ng-bind="::item.presentablePrice"></div>
                             <div class="col-xs-12">
                                 <hr>
                             </div>
@@ -87,9 +85,7 @@
                                 <div class="col-xs-8 col-sm-10" i18n code="shop.prices.subtotal.label" read-only>
                                     <strong>{{::var}}</strong>
                                 </div>
-                                <div class="col-xs-4 col-sm-2">
-                                    {{(viewOrderCtrl.order.itemsTotal / 100).toFixed(2) | currency}}
-                                </div>
+                                <div class="col-xs-4 col-sm-2" ng-bind="::viewOrderCtrl.order.presentableItemsTotal"></div>
                             </div>
                             <div class="row" ng-repeat="item in viewOrderCtrl.order.additionalCharges">
                                 <div class="col-xs-8 col-sm-10"
@@ -97,18 +93,14 @@
                                      read-only>
                                     <strong>{{::var}}</strong>
                                 </div>
-                                <div class="col-xs-4 col-sm-2">
-                                    {{item.value / 100 | currency}}
-                                </div>
+                                <div class="col-xs-4 col-sm-2" ng-bind="::item.presentableValue"></div>
                             </div>
                             <div class="row">
                                 <div class="col-xs-8 col-sm-10" i18n code="shop.prices.total.label" read-only>
                                     <strong>{{::var}}</strong>
                                 </div>
                                 <div class="col-xs-4 col-sm-2">
-                                    <div class="basket-total-price">
-                                        {{viewOrderCtrl.order.total / 100 | currency}}
-                                    </div>
+                                    <div class="basket-total-price" ng-bind="::viewOrderCtrl.order.presentableTotal"></div>
                                 </div>
                             </div>
                         </div>
