Renamed presentable fields for basket-items

--- a/template/bootstrap3/shop-basket-list-item-default.html
+++ b/template/bootstrap3/shop-basket-list-item-default.html
@@ -44,14 +44,14 @@
                     {{::var}}
                 </th>
                 <td>
-                    <span class="item-price" ng-bind="::item.presentableUnitPrice"></span>
+                    <span class="item-price" ng-bind="::item.presentablePrice"></span>
                 </td>
             </tr>
             <tr ng-if="item.quantity > 1">
                 <th i18n code="shop.item.total.label" read-only>
                     {{::var}}
                 </th>
-                <td ng-bind="item.presentablePrice"></td>
+                <td ng-bind="item.presentableSubTotal"></td>
             </tr>
             </tbody>
         </table>
