--- a/template/bootstrap3/shop-purchase-order-details.html
+++ b/template/bootstrap3/shop-purchase-order-details.html
@@ -74,7 +74,7 @@
                                     {{::var}} ({{::item.quantity}})
                                 </a>
                             </div>
-                            <div class="col-xs-4 text-right" ng-bind="::item.presentablePrice"></div>
+                            <div class="col-xs-4 text-right" ng-bind="::item.presentableSubTotal"></div>
                             <div class="col-xs-12">
                                 <hr>
                             </div>
