--- a/template/bootstrap3/shop-summary.html
+++ b/template/bootstrap3/shop-summary.html
@@ -65,7 +65,7 @@
                                 <div class="col-xs-8" i18n code="{{::item.id}}" read-only>
                                     {{::var}} ({{::item.quantity}})
                                 </div>
-                                <div class="col-xs-4 text-right" ng-bind="::item.presentablePrice"></div>
+                                <div class="col-xs-4 text-right" ng-bind="::item.presentableSubTotal"></div>
                                 <div class="col-xs-12">
                                     <hr>
                                 </div>
