styling bin-basket-panel instead of leaving it as part of the too generic bin-shop

--- a/less/shop.less
+++ b/less/shop.less
@@ -12,27 +12,6 @@
     }
   }
 
-  .bin-basket-item {
-    .caption {
-      position: relative;
-    }
-
-    .item-title {
-      margin: 0 40px 20px 0;
-      font-size: 16px;
-    }
-
-    .item-prices {
-      width: 100%;
-    }
-
-    .item-remove {
-      position: absolute;
-      top: 9px;
-      right: 9px;
-    }
-  }
-
   &.bin-shop-fullscreen {
     position: fixed;
     top: 0;
@@ -94,6 +73,29 @@
 
     .terms-agreement-message {
       text-align: right;
+    }
+  }
+}
+
+.bin-basket-panel {
+  .bin-basket-item {
+    .caption {
+      position: relative;
+    }
+
+    .item-title {
+      margin: 0 40px 20px 0;
+      font-size: 16px;
+    }
+
+    .item-prices {
+      width: 100%;
+    }
+
+    .item-remove {
+      position: absolute;
+      top: 9px;
+      right: 9px;
     }
   }
 }
